--- a/components/crn-cron-report-viewer.components.json
+++ b/components/crn-cron-report-viewer.components.json
@@ -9,7 +9,7 @@
   "description": "Estrutura para criar relatórios com valores da fonte de dados",
   "description_en_US": "Framework for creating reports with data source values",
   "category": [
-      "COMBOS"
+      "LAYOUTS"
   ],
   "designTimeSelector": "cron-report-viewer",
   "templateURL": "src/main/webapp/node_modules/cronapp-framework-js/dist/components/templates/cron-report-viewer.template.html",
