--- a/components/crn-dynamic-file.components.json
+++ b/components/crn-dynamic-file.components.json
@@ -6,7 +6,7 @@
   "description": "Estrutura para armazenar arquivos na fonte de dados",
   "description_en_US": "Structure for storing file in data source",
   "category": [
-      "INPUTS"
+      "INPUTS", "FORMS"
   ],
   "templateURL": "src/main/webapp/node_modules/cronapp-framework-js/dist/components/templates/dynamicfile.template.html",
   "styles": [
