--- a/components/crn-button.components.json
+++ b/components/crn-button.components.json
@@ -6,6 +6,9 @@
     "image": "/node_modules/cronapp-framework-js/img/cron-icon/crn-button.svg",
     "description": "Botão",
     "description_en_US": "Button",
+    "category": [
+        "BUTTONS", "FORMS"
+      ],
     "wrapper": true,
     "autoWrapper": false,
     "templateURL": "src/main/webapp/node_modules/cronapp-framework-js/dist/components/templates/button.template.html",
