--- a/components/crn-calendar.components.json
+++ b/components/crn-calendar.components.json
@@ -9,7 +9,7 @@
   "description": "Calendário mensal",
   "description_en_US": "Monthly calendar",
   "category": [
-    "LAYOUTS"
+    "INPUTS", "FORMS"
   ],
   "designTimeDynamic": true,
   "designTimeHTMLURL": "src/main/webapp/node_modules/cronapp-framework-js/components/templates/cron-calendar.designtime.html",
