--- a/components/crn-datasource.components.json
+++ b/components/crn-datasource.components.json
@@ -10,6 +10,9 @@
   "image": "/node_modules/cronapp-framework-js/img/cron-icon/crn-datasource.svg",
   "description": "Estrutura que insere valores do banco de dados",
   "description_en_US": "Database Value Insertion Structure",
+  "category": [
+    "LAYOUTS", "FORMS"
+  ],
   "templateURL": "src/main/webapp/node_modules/cronapp-framework-js/dist/components/templates/datasource.template.html",
   "properties": {
     "name": {
