--- a/components/crn-enterprise-dynamic-combobox.components.json
+++ b/components/crn-enterprise-dynamic-combobox.components.json
@@ -8,7 +8,7 @@
   "description": "Campo de seleção com valores da fonte de dados",
   "description_en_US": "Selection field with data source values",
   "category": [
-    "INPUTS"
+    "INPUTS", "FORMS", "COMBOS"
   ],
   "order": 3,
   "setRandomId": false,
