--- a/components/crn-sub-form-template.components.json
+++ b/components/crn-sub-form-template.components.json
@@ -7,7 +7,7 @@
   "description": "Estrutura completa para criar/atualizar/deletar cadastros de dados",
   "description_en_US": "Complete structure for creating/updating/deleting data entries",
   "category": [
-    "COMBOS"
+    "LAYOUTS", "FORMS"
   ],
   "designTimeSelector": "div[data-component='crn-sub-form']",
   "templateURL": "src/main/webapp/node_modules/cronapp-framework-js/dist/components/templates/sub-form.template.html"
