--- a/components/crn-text-component.components.json
+++ b/components/crn-text-component.components.json
@@ -7,7 +7,7 @@
   "description": "Texto com letra grande",
   "description_en_US": "Large font text",
   "category": [
-    "TEXTS"
+    "TEXTS", "LAYOUTS"
   ],
   "order": 10,
   "templateURL": "src/main/webapp/node_modules/cronapp-framework-js/dist/components/templates/dynamictitle.template.html",
