--- a/components/crn-textinput.components.json
+++ b/components/crn-textinput.components.json
@@ -6,7 +6,7 @@
   "description": "Campo para inserir texto",
   "description_en_US": "Field to enter text",
   "category": [
-    "INPUTS"
+    "INPUTS", "FORMS"
   ],
   "image": "/node_modules/cronapp-framework-js/img/cron-icon/crn-textinput.svg",
   "templateURL": "src/main/webapp/node_modules/cronapp-framework-js/dist/components/templates/textinput.template.html",
