--- a/components/crn-enterprise-dynamic-combobox.components.json
+++ b/components/crn-enterprise-dynamic-combobox.components.json
@@ -24,43 +24,6 @@
       "order": 1
     }
   },
-  "styles": [   
-    {
-      "selector": ".cronDynamicSelect .k-dropdown-wrap",
-      "text_pt_BR": "Geral",
-      "text_en_US": "General"
-    },
-    {
-      "selector": ".cronDynamicSelect .k-dropdown-wrap .k-input",
-      "text_pt_BR": "Caixa de Seleção",
-      "text_en_US": "Combobox"
-    },
-    {
-      "selector": ".cronDynamicSelect .k-dropdown-wrap .k-select",
-      "text_pt_BR": "Seta",
-      "text_en_US": "Dropdown"
-    },
-    {
-      "selector": "label#{id}_label",
-      "text_pt_BR": "Título",
-      "text_en_US": "Title"
-    },
-    {
-      "selector": "#{id}-list, #{id}-list .k-list-optionlabel",
-      "text_pt_BR": "Lista de Itens",
-      "text_en_US": "Item List"
-    },
-    {
-      "selector": "#{id}_listbox .k-state-hover",
-      "text_pt_BR": "Item da Lista Hover",
-      "text_en_US": "Item List Hover"
-    },
-    {
-      "selector": "#{id}_listbox .k-state-focused",
-      "text_pt_BR": "Item Selecionado",
-      "text_en_US": "Selected Item"
-    }
-  ],
   "childrenProperties": [
     {
       "name": "ng-change",
@@ -132,5 +95,37 @@
       "type": "text",
       "onSave": "javascript:(value)=> {this.currentObject.parent().find('label').attr('for', arguments[0]); return arguments[0];}"
     }
-  ]  
+  ],
+  "styles": [
+    {
+      "selector": "div#{id} .k-dropdown-wrap",
+      "text_pt_BR": "Caixa de Seleção",
+      "text_en_US": "Combobox"
+    },
+    {
+      "selector": "div#{id} .k-dropdown-wrap .k-select",
+      "text_pt_BR": "Seta",
+      "text_en_US": "Dropdown"
+    },
+    {
+      "selector": "label#{id}_label",
+      "text_pt_BR": "Título",
+      "text_en_US": "Title"
+    },
+    {
+      "selector": "#{id}-list, #{id}-list .k-list-optionlabel",
+      "text_pt_BR": "Lista de Itens",
+      "text_en_US": "Item List"
+    },
+    {
+      "selector": "#{id}_listbox .k-state-hover",
+      "text_pt_BR": "Item da Lista Hover",
+      "text_en_US": "Item List Hover"
+    },
+    {
+      "selector": "#{id}_listbox .k-state-focused",
+      "text_pt_BR": "Item Selecionado",
+      "text_en_US": "Selected Item"
+    }
+  ]
 }
