--- a/components/crn-enterprise-autocomplete.components.json
+++ b/components/crn-enterprise-autocomplete.components.json
@@ -10,10 +10,10 @@
     "category": [
         "COMBOS", "INPUTS", "FORMS"
     ],
-    "designTimeDynamic": true,
-    "designTimeHTMLURL": "src/main/webapp/node_modules/cronapp-framework-js/dist/components/templates/cron-autocomplete.designtime.html",
-    "designTimeSelector": "cron-auto-complete",
     "templateURL": "src/main/webapp/node_modules/cronapp-framework-js/dist/components/templates/cron-autocomplete.template.html",
+    "designTimeHTMLURL": "src/main/webapp/node_modules/cronapp-framework-js/dist/components/templates/cron-autocomplete.designtime.html",
+    "designTimeSelector": ":self",
+    "designTimeDynamic": true,
     "properties": {
         "class": {
             "order": 9999
@@ -22,33 +22,6 @@
             "order": 1
         }
     },
-    "styles": [
-        {
-            "selector": "div#{id} .k-input",
-            "text_pt_BR": "Entrada de Texto",
-            "text_en_US": "Input"
-        },
-        {
-            "selector": "div#{id} .k-autocomplete",
-            "text_pt_BR": "Plano de fundo da Entrada de Texto",
-            "text_en_US": "Input Background"
-        },
-        {
-            "selector": "div#{id} label",
-            "text_pt_BR": "Título",
-            "text_en_US": "Title"
-        },
-        {
-            "selector": "#cron-{id}-list",
-            "text_pt_BR": "Plano de fundo da Lista",
-            "text_en_US": "Item Background"
-        },
-        {
-            "selector": "#cron-{id}-list .k-list-scroller .k-list .k-item",
-            "text_pt_BR": "Itens da lista",
-            "text_en_US": "Item List"
-        }
-    ],
     "childrenProperties": [
         {
             "name": "options",
@@ -115,6 +88,28 @@
             "name": "ng-required",
             "selector": "cron-auto-complete",
             "type": "logic"
+        }
+    ],
+    "styles": [
+        {
+            "selector": "div#{id} .form-group .k-autocomplete, div#{id} .form-group .cronAutoComplete",
+            "text_pt_BR": "Entrada de Texto",
+            "text_en_US": "Input"
+        },
+        {
+            "selector": "div#{id} .form-group .k-autocomplete .k-input::placeholder",
+            "text_pt_BR": "Sugestão",
+            "text_en_US": "Placeholder"
+        },
+        {
+            "selector": "div#{id} .form-group label",
+            "text_pt_BR": "Título",
+            "text_en_US": "Title"
+        },
+        {
+            "selector": "#cron-{id}-list",
+            "text_pt_BR": "Plano de fundo da Lista",
+            "text_en_US": "Item Background"
         }
     ]
 }
