--- a/components/crn-enterprise-combobox-multiple.components.json
+++ b/components/crn-enterprise-combobox-multiple.components.json
@@ -21,41 +21,146 @@
     },
     "id": {
       "order": 1
+    },
+    "combobox-theme": {
+      "displayName_pt_BR": "Cor da caixa de seleção",
+      "displayName_en_US": "Combobox color"
     }
   },
-  "styles": [
+  "attributesForPreview": [
     {
-      "selector": "div#{id} .k-multiselect-wrap",
-      "text_pt_BR": "Campo de Seleção Múltipla",
-      "text_en_US": "Multi Select Field"
-    },
-    {
-      "selector": "div#{id} .k-multiselect-wrap .k-button",
-      "text_pt_BR": "Itens Selecionados",
-      "text_en_US": "Selected Itens on Field"
-    },
-    {
-      "selector": "div#{id} .k-multiselect-wrap .k-button .k-select",
-      "text_pt_BR": "Ícone dos Itens Selecionados",
-      "text_en_US": "Selected Itens on Field"
-    },
-    {
-      "selector": ".k-animation-container div#cron-{id}-list",
-      "text_pt_BR": "Plano de fundo dos Itens",
-      "text_en_US": "Item List Background"
-    },
-    {
-      "selector": "div#cron-{id}-list .k-list > .k-item",
-      "text_pt_BR": "Itens da Lista",
-      "text_en_US": "Item List"
-    },
-    {
-      "selector": "div#cron-{id}-list .k-list .k-state-hover, div#cron-{id}-list .k-list .k-state-focused",
-      "text_pt_BR": "Item da Lista Hover",
-      "text_en_US": "Item List Hover"
+      "name": "combobox-theme",
+      "type": "options",
+      "target": "class",
+      "values": [
+        {
+          "key": "combobox-gray",
+          "value_pt_BR": "Cinza",
+          "value_en_US": "Gray",
+          "color": "#333"
+        },
+        {
+          "key": "combobox-black",
+          "value_pt_BR": "Preto",
+          "value_en_US": "Black",
+          "color": "#000"
+        },
+        {
+          "key": "combobox-blue",
+          "value_pt_BR": "Azul",
+          "value_en_US": "Blue",
+          "color": "#0247FE"
+        },
+        {
+          "key": "combobox-light-blue",
+          "value_pt_BR": "Azul claro",
+          "value_en_US": "Light blue",
+          "color": "#85A5FF"
+        },
+        {
+          "key": "combobox-dark-blue",
+          "value_pt_BR": "Azul escuro",
+          "value_en_US": "Dark blue",
+          "color": "#00217A"
+        },
+        {
+          "key": "combobox-purple",
+          "value_pt_BR": "Roxo",
+          "value_en_US": "Purple",
+          "color": "#3D01A4"
+        },
+        {
+          "key": "combobox-light-purple",
+          "value_pt_BR": "Roxo claro",
+          "value_en_US": "Light purple",
+          "color": "#B285FF"
+        },
+        {
+          "key": "combobox-dark-purple",
+          "value_pt_BR": "Roxo escuro",
+          "value_en_US": "Dark purple",
+          "color": "#2D007A"
+        },
+        {
+          "key": "combobox-red",
+          "value_pt_BR": "Vermelho",
+          "value_en_US": "Red",
+          "color": "#FE2712"
+        },
+        {
+          "key": "combobox-light-red",
+          "value_pt_BR": "Vermelho claro",
+          "value_en_US": "Light red",
+          "color": "#FE8F84"
+        },
+        {
+          "key": "combobox-dark-red",
+          "value_pt_BR": "Vermelho escuro",
+          "value_en_US": "Dark red",
+          "color": "#7A0B00"
+        },
+        {
+          "key": "combobox-orange",
+          "value_pt_BR": "Laranja",
+          "value_en_US": "Orange",
+          "color": "#FB9B02"
+        },
+        {
+          "key": "combobox-light-orange",
+          "value_pt_BR": "Laranja claro",
+          "value_en_US": "Light orange",
+          "color": "#FFD085"
+        },
+        {
+          "key": "combobox-dark-orange",
+          "value_pt_BR": "Laranja escuro",
+          "value_en_US": "Dark orange",
+          "color": "#7A4B00"
+        },
+        {
+          "key": "combobox-yellow",
+          "value_pt_BR": "Amarelo",
+          "value_en_US": "Yellow",
+          "color": "#FFFF33"
+        },
+        {
+          "key": "combobox-light-yellow",
+          "value_pt_BR": "Amarelo claro",
+          "value_en_US": "Light yellow",
+          "color": "#FFFF85"
+        },
+        {
+          "key": "combobox-dark-yellow",
+          "value_pt_BR": "Amarelo escuro",
+          "value_en_US": "Dark Yellow",
+          "color": "#7A7A00"
+        },
+        {
+          "key": "combobox-green",
+          "value_pt_BR": "Verde",
+          "value_en_US": "Green",
+          "color": "#66B032"
+        },
+        {
+          "key": "combobox-light-green",
+          "value_pt_BR": "Verde claro",
+          "value_en_US": "Light green",
+          "color": "#B7FF85"
+        },
+        {
+          "key": "combobox-dark-green",
+          "value_pt_BR": "Verde escuro",
+          "value_en_US": "Dark green",
+          "color": "#337A00"
+        }
+      ]
     }
   ],
   "childrenProperties": [
+    {
+      "name": "combobox-theme",
+      "selector": "div.form-group"
+    },
     {
       "name": "ng-change",
       "selector": "cron-multi-select",
@@ -133,6 +238,33 @@
       "type": "logic",
       "displayName_pt_BR": "Apenas Leitura",
       "displayName_en_US": "Read Only"
+    }
+  ],
+  "styles": [
+    {
+      "selector": "div#{id} .k-multiselect-wrap",
+      "text_pt_BR": "Campo de Seleção Múltipla",
+      "text_en_US": "Multi Select Field"
+    },
+    {
+      "selector": "div#{id} .k-multiselect-wrap .k-button",
+      "text_pt_BR": "Itens Selecionados",
+      "text_en_US": "Selected Itens on Field"
+    },
+    {
+      "selector": "div#{id} .k-multiselect-wrap .k-button .k-select",
+      "text_pt_BR": "Ícone dos Itens Selecionados",
+      "text_en_US": "Selected Itens on Field"
+    },
+    {
+      "selector": ".k-animation-container div#cron-{id}-list",
+      "text_pt_BR": "Plano de fundo dos Itens",
+      "text_en_US": "Item List Background"
+    },
+    {
+      "selector": "div#cron-{id}-list .k-list .k-state-hover, div#cron-{id}-list .k-list .k-state-focused",
+      "text_pt_BR": "Item da Lista Hover",
+      "text_en_US": "Item List Hover"
     }
   ]
 }
