--- a/components/crn-enterprise-dynamic-autocomplete.components.json
+++ b/components/crn-enterprise-dynamic-autocomplete.components.json
@@ -22,33 +22,6 @@
       "order": 1
     }
   },
-  "styles": [
-    {
-      "selector": "div#{id} .k-dropdown-wrap",
-      "text_pt_BR": "Entrada de Dados",
-      "text_en_US": "Input"
-    },
-    {
-      "selector": "div#{id} label",
-      "text_pt_BR": "Título",
-      "text_en_US": "Title"
-    },
-    {
-      "selector": ".k-animation-container div#cron-{id}-list",
-      "text_pt_BR": "Plano de fundo lista de Itens",
-      "text_en_US": "List Items Background"
-    },
-    {
-      "selector": "div#cron-{id}-list .k-list .k-item",
-      "text_pt_BR": "Itens da Lista",
-      "text_en_US": "List Item"
-    },
-    {
-      "selector": "div#cron-{id}-list .k-list .k-state-hover",
-      "text_pt_BR": "Item da Lista Hover",
-      "text_en_US": "List Item Hover"
-    }
-  ],
   "childrenProperties": [
     {
       "name": "options",
@@ -116,5 +89,32 @@
       "selector": "cron-auto-complete",
       "type": "logic"
     }
-  ]  
+  ],
+  "styles": [
+    {
+      "selector": "div#{id} .cronAutoComplete",
+      "text_pt_BR": "Entrada de Dados",
+      "text_en_US": "Input"
+    },
+    {
+      "selector": "div#{id} label",
+      "text_pt_BR": "Título",
+      "text_en_US": "Title"
+    },
+    {
+      "selector": ".k-animation-container div#cron-{id}-list",
+      "text_pt_BR": "Plano de fundo lista de Itens",
+      "text_en_US": "List Items Background"
+    },
+    {
+      "selector": "div#cron-{id}-list .k-list .k-item",
+      "text_pt_BR": "Itens da Lista",
+      "text_en_US": "List Item"
+    },
+    {
+      "selector": "div#cron-{id}-list .k-list .k-state-hover",
+      "text_pt_BR": "Item da Lista Hover",
+      "text_en_US": "List Item Hover"
+    }
+  ]
 }
