--- a/components/crn-icon.components.json
+++ b/components/crn-icon.components.json
@@ -43,13 +43,6 @@
       "order": 2
     }
   },
-  "styles": [
-    {
-      "selector": "div#{id} i",
-      "text_pt_BR": "Ícone",
-      "text_en_US": "Icon"
-    }
-  ],
   "childrenProperties": [
     {
       "name": "class",
@@ -75,112 +68,133 @@
     {
       "name": "icon-theme",
       "type": "options",
-      "target": "style",
+      "target": "class",
       "values": [
         {
-          "key": "color: #fff;",
+          "key": "color-white",
           "value_pt_BR": "Branco",
-          "value_en_US": "White"
+          "value_en_US": "White",
+          "color": "#ffffff"
         },
         {
-          "key": "",
+          "key": "color-gray",
           "value_pt_BR": "Cinza",
-          "value_en_US": "Gray"
+          "value_en_US": "Gray",
+          "color": "#3A3A3A"
         },
         {
-          "key": "color: #000;",
+          "key": "color-black",
           "value_pt_BR": "Preto",
-          "value_en_US": "Black"
+          "value_en_US": "Black",
+          "color": "#000000"
         },
         {
-          "key": "color: #0247FE;",
+          "key": "color-blue",
           "value_pt_BR": "Azul",
-          "value_en_US": "Blue"
+          "value_en_US": "Blue",
+          "color": "#0247FE"
         },
         {
-          "key": "color: #85A5FF;",
+          "key": "color-light-blue",
           "value_pt_BR": "Azul claro",
-          "value_en_US": "Blue"
+          "value_en_US": "Light blue",
+          "color": "#85A5FF"
         },
         {
-          "key": "color: #00217A;",
+          "key": "color-dark-blue",
           "value_pt_BR": "Azul escuro",
-          "value_en_US": "Blue"
+          "value_en_US": "Dark blue",
+          "color": "#00217A"
         },
         {
-          "key": "color: #3D01A4;",
+          "key": "color-purple",
           "value_pt_BR": "Roxo",
-          "value_en_US": "Purple"
+          "value_en_US": "Purple",
+          "color": "#3D01A4"
         },
         {
-          "key": "color: #B285FF;",
+          "key": "color-light-purple",
           "value_pt_BR": "Roxo claro",
-          "value_en_US": "Purple"
+          "value_en_US": "Light purple",
+          "color": "#B285FF"
         },
         {
-          "key": "color: #2D007A;",
+          "key": "color-dark-purple",
           "value_pt_BR": "Roxo escuro",
-          "value_en_US": "Purple"
+          "value_en_US": "Dark purple",
+          "color": "#2D007A"
         },
         {
-          "key": "color: #FE2712;",
+          "key": "color-red",
           "value_pt_BR": "Vermelho",
-          "value_en_US": "Red"
+          "value_en_US": "Red",
+          "color": "#FE2712"
         },
         {
-          "key": "color: #FE8F84;",
+          "key": "color-light-red",
           "value_pt_BR": "Vermelho claro",
-          "value_en_US": "Red"
+          "value_en_US": "Light red",
+          "color": "#FE8F84"
         },
         {
-          "key": "color: #7A0B00;",
+          "key": "color-dark-red",
           "value_pt_BR": "Vermelho escuro",
-          "value_en_US": "Red"
+          "value_en_US": "Dark red",
+          "color": "#7A0B00"
         },
         {
-          "key": "color: #FB9B02;",
+          "key": "color-orange",
           "value_pt_BR": "Laranja",
-          "value_en_US": "Orange"
+          "value_en_US": "Orange",
+          "color": "#FB9B02"
         },
         {
-          "key": "color: #FFD085;",
+          "key": "color-light-orange",
           "value_pt_BR": "Laranja claro",
-          "value_en_US": "Orange"
+          "value_en_US": "Light orange",
+          "color": "#FFD085"
         },
         {
-          "key": "color: #7A4B00;",
+          "key": "color-dark-orange",
           "value_pt_BR": "Laranja escuro",
-          "value_en_US": "Orange"
+          "value_en_US": "Dark orange",
+          "color": "#7A4B00"
         },
         {
-          "key": "color: #FFFF33;",
+          "key": "color-yellow",
           "value_pt_BR": "Amarelo",
-          "value_en_US": "Yellow"
+          "value_en_US": "Yellow",
+          "color": "#FFFF33"
         },
         {
-          "key": "color: #FFFF85;",
+          "key": "color-light-yellow",
           "value_pt_BR": "Amarelo claro",
-          "value_en_US": "Yellow"
+          "value_en_US": "Light yellow",
+          "color": "#FFFF85"
         },
         {
-          "key": "color: #FFFF33;",
+          "key": "color-dark-yellow",
           "value_pt_BR": "Amarelo escuro",
-          "value_en_US": "7A7A00"
+          "value_en_US": "Dark Yellow",
+          "color": "#7A7A00"
         },
         {
-          "key": "color: #66B032;",
+          "key": "color-green",
           "value_pt_BR": "Verde",
-          "value_en_US": "Green"
+          "value_en_US": "Green",
+          "color": "#66B032"
         },
         {
-          "key": "color: #B7FF85;",
+          "key": "color-light-green",
           "value_pt_BR": "Verde claro",
-          "value_en_US": "Green"
+          "value_en_US": "Light green",
+          "color": "#B7FF85"
         },
         {
-          "key": "color: #337A00;",
+          "key": "color-dark-green;",
           "value_pt_BR": "Verde escuro",
-          "value_en_US": "Green"
+          "value_en_US": "Dark green",
+          "color": "#337A00"
         }
       ]
     },
