--- a/components/crn-input-password.components.json
+++ b/components/crn-input-password.components.json
@@ -9,7 +9,10 @@
         "INPUTS", "FORMS"
     ],
     "image": "/node_modules/cronapp-framework-js/img/cron-icon/crn-input-password.svg",
-    "templateURL": "src/main/webapp/node_modules/cronapp-framework-js/components/templates/input/crn-input-password.template.html",
+    "templateURL": "src/main/webapp/node_modules/cronapp-framework-js/dist/components/templates/crn-input-password.template.html",
+    "designTimeHTMLURL": "src/main/webapp/node_modules/cronapp-framework-js/dist/components/templates/crn-input-password.designtime.html",
+    "designTimeSelector": ":self",
+    "designTimeDynamic": true,
     "properties": {
         "class": {
             "order": 9999
@@ -18,23 +21,6 @@
             "order": 1
         }
     },
-    "styles": [
-        {
-            "selector": "div#{id} input.form-control",
-            "text_pt_BR": "Entrada de senha",
-            "text_en_US": "Input"
-        },
-        {
-            "selector": "div#{id} label",
-            "text_pt_BR": "Título",
-            "text_en_US": "Title"
-        },
-        {
-            "selector": "div#{id} .cardinput button i",
-            "text_pt_BR": "Ícone olho",
-            "text_en_US": "Eye icon"
-        }
-    ],
     "childrenProperties": [
         {
             "name": "content",
@@ -49,6 +35,28 @@
             "displayName_en_US": "Placeholder",
             "selector": "input",
             "type": "text"
+        }
+    ],
+    "styles": [
+        {
+            "selector": "div#{id} input.form-control, div#{id} .cardinput",
+            "text_pt_BR": "Entrada de senha",
+            "text_en_US": "Input"
+        },
+        {
+            "selector": "div#{id} input::placeholder",
+            "text_pt_BR": "Sugestão",
+            "text_en_US": "Placeholder"
+        },
+        {
+            "selector": "div#{id} label",
+            "text_pt_BR": "Título",
+            "text_en_US": "Title"
+        },
+        {
+            "selector": "div#{id} .cardinput button i",
+            "text_pt_BR": "Ícone olho",
+            "text_en_US": "Eye icon"
         }
     ]
 }
