--- a/components/crn-radiogroup.components.json
+++ b/components/crn-radiogroup.components.json
@@ -11,13 +11,6 @@
   ],
   "wrapper": false,
   "templateURL": "src/main/webapp/node_modules/cronapp-framework-js/dist/components/templates/radiogroup.template.html",
-  "styles": [
-    {
-      "selector": "div#{id} span",
-      "text_pt_BR": "Legenda",
-      "text_en_US": "Caption"
-    }
-  ],
   "properties": {
     "ng-model": {
       "onSave": "javascript:function() { var result = arguments[0]; if (result.indexOf('.') == -1 && result.trim().length > 0 ) { result = 'vars.'+result;  }  return result; }",
@@ -54,6 +47,10 @@
     "ng-mousemove": {
       "removable": true,
       "type": "event"
+    },
+    "option-theme": {
+      "displayName_pt_BR": "Cor do botão de opção",
+      "displayName_en_US": "Radio button color"
     }
   },
   "handleRules": {
@@ -64,5 +61,159 @@
         "targetSelector": ":self"
       }
     ]
-  }
+  },
+  "attributesForPreview": [
+    {
+      "name": "option-theme",
+      "type": "options",
+      "target": "class",
+      "values": [
+        {
+          "key": "option-white",
+          "value_pt_BR": "Branco",
+          "value_en_US": "White",
+          "color": "#fff"
+        },
+        {
+          "key": "option-gray",
+          "value_pt_BR": "Cinza",
+          "value_en_US": "Gray",
+          "color": "#333"
+        },
+        {
+          "key": "option-black",
+          "value_pt_BR": "Preto",
+          "value_en_US": "Black",
+          "color": "#000"
+        },
+        {
+          "key": "option-blue",
+          "value_pt_BR": "Azul",
+          "value_en_US": "Blue",
+          "color": "#0247FE"
+        },
+        {
+          "key": "option-light-blue",
+          "value_pt_BR": "Azul claro",
+          "value_en_US": "Light blue",
+          "color": "#85A5FF"
+        },
+        {
+          "key": "option-dark-blue",
+          "value_pt_BR": "Azul escuro",
+          "value_en_US": "Dark blue",
+          "color": "#00217A"
+        },
+        {
+          "key": "option-purple",
+          "value_pt_BR": "Roxo",
+          "value_en_US": "Purple",
+          "color": "#3D01A4"
+        },
+        {
+          "key": "option-light-purple",
+          "value_pt_BR": "Roxo claro",
+          "value_en_US": "Light purple",
+          "color": "#B285FF"
+        },
+        {
+          "key": "option-dark-purple",
+          "value_pt_BR": "Roxo escuro",
+          "value_en_US": "Dark purple",
+          "color": "#2D007A"
+        },
+        {
+          "key": "option-red",
+          "value_pt_BR": "Vermelho",
+          "value_en_US": "Red",
+          "color": "#FE2712"
+        },
+        {
+          "key": "option-light-red",
+          "value_pt_BR": "Vermelho claro",
+          "value_en_US": "Light red",
+          "color": "#FE8F84"
+        },
+        {
+          "key": "option-dark-red",
+          "value_pt_BR": "Vermelho escuro",
+          "value_en_US": "Dark red",
+          "color": "#7A0B00"
+        },
+        {
+          "key": "option-orange",
+          "value_pt_BR": "Laranja",
+          "value_en_US": "Orange",
+          "color": "#FB9B02"
+        },
+        {
+          "key": "option-light-orange",
+          "value_pt_BR": "Laranja claro",
+          "value_en_US": "Light orange",
+          "color": "#FFD085"
+        },
+        {
+          "key": "option-dark-orange",
+          "value_pt_BR": "Laranja escuro",
+          "value_en_US": "Dark orange",
+          "color": "#7A4B00"
+        },
+        {
+          "key": "option-yellow",
+          "value_pt_BR": "Amarelo",
+          "value_en_US": "Yellow",
+          "color": "#FFFF33"
+        },
+        {
+          "key": "option-light-yellow",
+          "value_pt_BR": "Amarelo claro",
+          "value_en_US": "Light yellow",
+          "color": "#FFFF85"
+        },
+        {
+          "key": "option-dark-yellow",
+          "value_pt_BR": "Amarelo escuro",
+          "value_en_US": "Dark Yellow",
+          "color": "#7A7A00"
+        },
+        {
+          "key": "option-green",
+          "value_pt_BR": "Verde",
+          "value_en_US": "Green",
+          "color": "#66B032"
+        },
+        {
+          "key": "option-light-green",
+          "value_pt_BR": "Verde claro",
+          "value_en_US": "Light green",
+          "color": "#B7FF85"
+        },
+        {
+          "key": "option-dark-green",
+          "value_pt_BR": "Verde escuro",
+          "value_en_US": "Dark green",
+          "color": "#337A00"
+        }
+      ]
+    }
+  ],
+  "childrenProperties": [
+    {
+      "name": "option-theme",
+      "selector": ":self",
+      "order": 3
+    }
+  ],
+  "styles": [
+    {
+      "selector": "div#{id} .k-radio-label, div#{id} .k-content",
+      "text_pt_BR": "Lista de opção",
+      "text_en_US": "Radio Group"
+    },
+    {
+      "selector": "div#{id} .k-radio+.k-radio-label::after, div#{id} .k-radio+.k-radio-label::before",
+      "text_pt_BR": "Botão da opção",
+      "text_en_US": "option button"
+    }
+  ]
 }
