--- a/components/crn-tabs.components.json
+++ b/components/crn-tabs.components.json
@@ -36,18 +36,6 @@
       }
     ]
   },
-  "styles": [
-    {
-      "selector": "div#{id} .nav-tabs>li.active>a",
-      "text_pt_BR": "Aba Ativa",
-      "text_en_US": "Active Tab"
-    },
-    {
-      "selector": "div#{id} .nav-tabs>li>a",
-      "text_pt_BR": "Aba Padrão",
-      "text_en_US": "Default Tab"
-    }
-  ],
   "childrenProperties": [
     {
       "name": "ng-init",
@@ -78,6 +66,23 @@
       "name": "ng-mousemove",
       "selector": "a",
       "type": "event"
+    }
+  ],
+  "styles": [
+    {
+      "selector": "div#{id} .nav-tabs",
+      "text_pt_BR": "Fundo da abas",
+      "text_en_US": "Tab background"
+    },
+    {
+      "selector": "div#{id} .nav-tabs li.active a",
+      "text_pt_BR": "Aba Ativa",
+      "text_en_US": "Active Tab"
+    },
+    {
+      "selector": "div#{id} .nav-tabs li a",
+      "text_pt_BR": "Aba Padrão",
+      "text_en_US": "Default Tab"
     }
   ]
 }
