--- a/components/crn-textinputicon.components.json
+++ b/components/crn-textinputicon.components.json
@@ -29,6 +29,11 @@
       "text_pt_BR": "Entrada de texto",
       "text_en_US": "Input"
     },
+    {      
+      "selector": "div#{id} input::placeholder",
+      "text_pt_BR": "Sugestão",
+      "text_en_US": "Placeholder"
+    },
     {
       "selector": "div#{id} span",
       "text_pt_BR": "Ícone",
