--- a/components/crn-cron-grid.components.json
+++ b/components/crn-cron-grid.components.json
@@ -12,7 +12,7 @@
     "GRIDS"
   ],
   "designTimeDynamic": true,
-  "designTimeHTMLURL": "src/main/webapp/node_modules/cronapp-framework-js/components/templates/cron-grid.designtime.html",
+  "designTimeHTMLURL": "src/main/webapp/node_modules/cronapp-framework-js/dist/components/templates/cron-grid.designtime.html",
   "designTimeSelector": "cron-grid",
   "templateURL": "src/main/webapp/node_modules/cronapp-framework-js/dist/components/templates/cron-grid.template.html",
   "properties": {
@@ -23,153 +23,6 @@
       "order": 1
     }
   },
-  "styles": [
-    {
-      "selector": "div#{id} .k-grid .k-grid-toolbar",
-      "text_pt_BR": "Barra de Ferramentas",
-      "text_en_US": "Toolbar"
-    },
-    {
-      "selector": "div#{id} .k-grid .k-header .k-grid-add",
-      "text_pt_BR": "Botão de Adicionar",
-      "text_en_US": "Add Button"
-    },
-    {
-      "selector": "div#{id} .k-grid .k-header .k-grid-save-changes",
-      "text_pt_BR": "Botão de Salvar Alterações",
-      "text_en_US": "Save Changes Button"
-    },
-    {
-      "selector": "div#{id} .k-grid .k-header .k-grid-cancel-changes",
-      "text_pt_BR": "Botão de Cancelar Alteração",
-      "text_en_US": "Cancel Changes Button"
-    },
-    {
-      "selector": "div#{id} .k-grid .k-grouping-header",
-      "text_pt_BR": "Agrupar Colunas",
-      "text_en_US": "Column Group"
-    },
-    {
-      "selector": "div#{id} .k-grid .k-grouping-header .k-group-indicator",
-      "text_pt_BR": "Item Agrupado",
-      "text_en_US": "Grouped Item"
-    },
-    {
-      "selector": "div#{id} .k-grid th.k-header",
-      "text_pt_BR": "Cabeçalho",
-      "text_en_US": "Header"
-    },
-    {
-      "selector": "div#{id} .k-grid .k-grid-header thead tr[role=\"row\"] a",
-      "text_pt_BR": "Título do cabeçalho",
-      "text_en_US": "Header Title"
-    },
-    {
-      "selector": "div#{id} .k-grid .k-grid-header thead tr[role=\"row\"] .k-i-filter",
-      "text_pt_BR": "Ícone do Filtro",
-      "text_en_US": "Filter Icon"
-    },
-    {
-      "selector": "div#{id} .k-grid .k-grid-content tr",
-      "text_pt_BR": "Linha Padrão",
-      "text_en_US": "Default Row"
-    },
-    {
-      "selector": "div#{id} .k-grid tr.k-alt",
-      "text_pt_BR": "Linha Alternada",
-      "text_en_US": "Alternate Row"
-    },
-    {
-      "selector": "div#{id} .k-grid tr.k-state-selected",
-      "text_pt_BR": "Linha Selecionada",
-      "text_en_US": "Selected Row"
-    },
-    {
-      "selector": "div#{id} .k-grid tbody .k-grid-edit",
-      "text_pt_BR": "Botão de Editar",
-      "text_en_US": "Edit Button"
-    },
-    {
-      "selector": "div#{id} .k-grid tbody .k-grid-delete",
-      "text_pt_BR": "Botão de Deletar",
-      "text_en_US": "Delete Button"
-    },
-    {
-      "selector": "div#{id} .k-grid tbody .k-grid-update",
-      "text_pt_BR": "Botão de Atualizar",
-      "text_en_US": "Update Button"
-    },
-    {
-      "selector": "div#{id} .k-grid tbody .k-grid-cancel",
-      "text_pt_BR": "Botão de Cancelar",
-      "text_en_US": "Cancel Button"
-    },
-    {
-      "selector": "div#{id} .k-grid .k-pager-wrap",
-      "text_pt_BR": "Área de paginação",
-      "text_en_US": "Pagination Container"
-    },
-    {
-      "selector": "div#{id} .k-grid .k-pager-wrap .k-dropdown .k-dropdown-wrap",
-      "text_pt_BR": "Combo de Paginação",
-      "text_en_US": "Pagination Dropdown"
-    },
-    {
-      "selector": "div#{id} .k-grid .k-pager-wrap>.k-link>.k-icon",
-      "text_pt_BR": "Ícones da Paginação",
-      "text_en_US": "Pagination Icons"
-    },
-    {
-      "selector": "div#{id} .k-grid .k-pager-numbers .k-state-selected",
-      "text_pt_BR": "Página Atual",
-      "text_en_US": "Current Page"
-    },
-    {
-      "selector": "div#{id} .k-grid .k-pager-numbers .k-link",
-      "text_pt_BR": "Item da Paginação",
-      "text_en_US": "Pagination Item"
-    },
-    {
-      "selector": "div#{id} .k-grid tbody .k-custom-command",
-      "text_pt_BR": "Botão Customizável Grid",
-      "text_en_US": "Custom Grid Button"
-    },
-    {
-      "selector": "div#{id} .k-grid .k-header .k-grid-custom",
-      "text_pt_BR": "Botão Customizável Cabeçalho",
-      "text_en_US": "Custom Header Button"
-    },
-    {
-      "selector": "div#{id} .k-grid .k-primary",
-      "text_pt_BR": "Botão de Salvar Item",
-      "text_en_US": "Save Item Button"
-    },
-    {
-      "selector": "div#{id} .k-grid .k-grid-cancel",
-      "text_pt_BR": "Botão de Cancelar Item",
-      "text_en_US": "Cancel Item Button"
-    },
-    {
-      "selector": "div#{id} .k-grid span.k-select",
-      "text_pt_BR": "Combo de Filtros",
-      "text_en_US": "Filters Combo"
-    },
-    {
-      "selector": ".k-animation-container .k-list-container",
-      "text_pt_BR": "Caixa de seleção da Paginação",
-      "text_en_US": "Pagination Combobox"
-    },
-    {
-      "selector": ".k-animation-container .k-popup .k-list .k-item",
-      "text_pt_BR": "Números da Paginação",
-      "text_en_US": "Pagination Numbers"
-    },
-    {
-      "selector": ".k-animation-container .k-list > .k-state-hover",
-      "text_pt_BR": "Ao passar o mouse na Paginação",
-      "text_en_US": "Mouse Hover the Pagination"
-    }
-  ],
   "childrenProperties": [
     {
       "name": "options",
@@ -264,5 +117,122 @@
       "displayName_en_US": "On Remove",
       "type": "event"
     }
-  ]  
+  ],
+  "styles": [
+    {
+      "selector": "div#{id} .k-grid .k-grid-toolbar, div#{id} .k-grid .k-grid-toolbar .crn-grid-title",
+      "text_pt_BR": "Barra de Ferramentas",
+      "text_en_US": "Toolbar"
+    },
+    {
+      "selector": "div#{id} .k-grid .k-header .k-grid-add",
+      "text_pt_BR": "Botão de Adicionar",
+      "text_en_US": "Add Button"
+    },
+    {
+      "selector": "div#{id} .k-grid .k-header .k-grid-save-changes",
+      "text_pt_BR": "Botão de Salvar Alterações",
+      "text_en_US": "Save Changes Button"
+    },
+    {
+      "selector": "div#{id} .k-grid .k-header .k-grid-cancel-changes",
+      "text_pt_BR": "Botão de Cancelar Alteração",
+      "text_en_US": "Cancel Changes Button"
+    },
+    {
+      "selector": "div#{id} .k-grid .k-grouping-header",
+      "text_pt_BR": "Agrupar Colunas",
+      "text_en_US": "Column Group"
+    },
+    {
+      "selector": "div#{id} .k-grid .k-grouping-header .k-group-indicator",
+      "text_pt_BR": "Item Agrupado",
+      "text_en_US": "Grouped Item"
+    },
+    {
+      "selector": "  div#{id} .k-grid th.k-header, div#{id} .k-grid th.k-header thead tr[role=\"row\"] a, div#{id} .k-grid-header .k-header a.k-link",
+      "text_pt_BR": "Cabeçalho",
+      "text_en_US": "Header"
+    },
+    {
+      "selector": "div#{id} .k-grid .k-grid-header thead tr[role=\"row\"] .k-i-filter",
+      "text_pt_BR": "Ícone do Filtro",
+      "text_en_US": "Filter Icon"
+    },
+    {
+      "selector": ".k-grid-toolbar .k-button.k-grid-save-changes",
+      "text_pt_BR": "Botão Salvar Alterações",
+      "text_en_US": "Save Changes Button"
+    },
+    {
+      "selector": ".k-grid-toolbar .k-button.k-grid-cancel-changes",
+      "text_pt_BR": "Botão Cancelar Alterações",
+      "text_en_US": "Cancel Changes Button"
+    },
+    {
+      "selector": "div#{id} .k-grid tbody",
+      "text_pt_BR": "Linha Padrão",
+      "text_en_US": "Default Row"
+    },
+    {
+      "selector": "div#{id} .k-grid tr.k-alt",
+      "text_pt_BR": "Linha Alternada",
+      "text_en_US": "Alternate Row"
+    },
+    {
+      "selector": "div#{id} .k-grid tr.k-state-selected",
+      "text_pt_BR": "Linha Selecionada",
+      "text_en_US": "Selected Row"
+    },
+    {
+      "selector": "div#{id} .k-grid tbody .k-grid-edit",
+      "text_pt_BR": "Botão de ação Editar",
+      "text_en_US": "Edit action button"
+    },
+    {
+      "selector": "div#{id} .k-grid tbody .k-grid-delete",
+      "text_pt_BR": "Botão de ação Deletar",
+      "text_en_US": "Delete action button"
+    },
+    {
+      "selector": "div#{id} .k-grid tbody .k-grid-update",
+      "text_pt_BR": "Botão de ação Atualizar",
+      "text_en_US": "Update action button"
+    },
+    {
+      "selector": "div#{id} .k-grid tbody .k-grid-cancel",
+      "text_pt_BR": "Botão de ação Cancelar",
+      "text_en_US": "Cancel action button"
+    },
+    {
+      "selector": "div#{id} .k-grid .k-pager-wrap, div#{id} .k-pager-info.k-label, div#{id} .k-grid .k-pager-wrap .k-dropdown .k-dropdown-wrap, div#{id} .k-grid .k-pager-wrap .k-dropdown .k-dropdown-wrap .k-input",
+      "text_pt_BR": "Área de paginação",
+      "text_en_US": "Pagination Container"
+    },
+    {
+      "selector": ".k-animation-container .k-list-container, .k-animation-container .k-popup .k-list .k-item",
+      "text_pt_BR": "Caixa de seleção da Paginação",
+      "text_en_US": "Pagination Combobox"
+    },
+    {
+      "selector": ".k-list-container .k-button.k-state-hover, .k-list-container .k-button::hover",
+      "text_pt_BR": "Ao passar o mouse na Paginação",
+      "text_en_US": "Mouse Hover the Pagination"
+    },
+    {
+      "selector": " .k-list .k-item.k-state-focused, .k-list .k-item::focus",
+      "text_pt_BR": "Paginação selecionada",
+      "text_en_US": "Selected paging"
+    },
+    {
+      "selector": "div#{id} .k-grid .k-pager-numbers .k-state-selected",
+      "text_pt_BR": "Marcador da Página Atual",
+      "text_en_US": "Current Page Marker"
+    },
+    {
+      "selector": "div#{id} .k-grid tbody .k-custom-command",
+      "text_pt_BR": "Botão Customizável",
+      "text_en_US": "Custom Button"
+    }
+  ]
 }
