--- a/components/crn-textinput.components.json
+++ b/components/crn-textinput.components.json
@@ -48,7 +48,7 @@
       "name": "ng-model",
       "selector": "input",
       "type": "text",
-      "onSave": "javascript:function() { var result = arguments[0]; if (result.indexOf('.') == -1 && result.trim().length > 0 ) { result = 'vars.'+result;  }  return result; }",
+      "onSave": "javascript:function() { var result = arguments[0]; result = result.replaceAll(/[-,+, ,(,),']/g,''); if (result.indexOf('.') == -1 && result.trim().length > 0 ) { result = 'vars.'+result; } return result; }",
       "onDisplay": "javascript:function() { return arguments[0].replace('vars.',''); }",
       "mandatory": true
     },
