--- a/components/crn-datasource.components.json
+++ b/components/crn-datasource.components.json
@@ -174,6 +174,11 @@
       "removable": false,
       "global": true,
       "order": 8
+    },
+    "on-change-status": {
+      "removable": true,
+      "type": "event",
+      "global": true
     }
   }
 }
